--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@ body, html {
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-black">BACK TO TOP</a>
+      <a href="#" class="w3-button w3-block w3-black">TOP</a>
     </div>
     <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-black">INFORMATION</a>
+      <a href="#about" class="w3-button w3-block w3-black">INFO</a>
     </div>
     <div class="w3-col s3">
       <a href="#menu" class="w3-button w3-block w3-black">MEDIA</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">REFERENCES</a>
+      <a href="#where" class="w3-button w3-block w3-black">CITATIONS</a>
     </div>
   </div>
 </div>
@@ -138,11 +138,11 @@ body, html {
     <div id="EDUCATIONAL VIDEOS" class="w3-container menu w3-padding-48 w3-card">
       <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">EDUCATIONAL VIDEOS</span></h5>
     <p align="center">Brief overview of Ichthyosaurs</p></center>
-    <center><iframe width="450" height="280" src="https://www.youtube.com/embed/OfZnBV_LFZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <center><iframe width="300" height="200" src="https://www.youtube.com/embed/OfZnBV_LFZc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
    <p align="center">CGI recreation of the Ichthyosaur's unique process of giving birth</p>
 
-    <center><iframe width="450" height="280" src="https://www.youtube.com/embed/rezCswEi6cA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <center><iframe width="300" height="200" src="https://www.youtube.com/embed/rezCswEi6cA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
     </form>
     </div>  
 
