--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body, html {
     <span class="w3-text-white" style="font-size:30px">Ichthyosaur</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Open from 8:30am to 4:30pm Monday to Friday      200 Univeristy Avenue West</span>
+    <span class="w3-text-white">Open from 8:30am to 4:30pm Monday to Friday      200 University Avenue West</span>
   </div>
 </header>
 
