--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body, html {
     <img src="https://i.pinimg.com/originals/96/83/b4/9683b4b9a68e8dcb167c445d417e1a0f.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Fun Facts:</strong> <ul>
   <p><li>Ichthyosaurs looked very similar to dolphins but they were completely unrelated! Ichthyosaurs were one of the marine reptiles that were adapted to be ocean dwellers around 200 million years before dolphins. Dolphins had a different origin as they evolved from legged marine mammals (Pichler, 2001). Although they look similar, the reason is suspected to be from natural selection as a streamlined body is a huge advantage when it comes to swimming (Pichler, 2001).</li>
-  <p><li>Although Ichthyosaurs were marine reptiles, they gave birth to live young in the sea instead of laying eggs, which is documented by the fossil records traced back to the end of the Anisian stage (Sander, 2000). Due to streamlined flattened bodies, Ichthyosaurs cannot move to land to lay eggs, like sea turtles and alligators. </li></p>
+  <p><li>Although Ichthyosaurs were marine reptiles, they gave birth to live young in the sea instead of laying eggs, which was documented by the fossil records traced back to the end of the Anisian stage (Sander, 2000). Due to streamlined flattened bodies, Ichthyosaurs cannot move to land to lay eggs, like sea turtles and alligators. </li></p>
 
 </li>
   <li>This fact might surprise you: Ichthyosaurs were probably 
